force-app/main/default/objects/hmisEmploymentEducation__c.object
<CustomObject>
    <description>Placeholder until standard PersonEducation object is released in Nonprofit Cloud</description>
    <fields>
        <fullName>API_DataCollectionStage__c</fullName>
        <formula>TRIM(LEFT(TEXT( hmisDataCollectionStage__c ),FIND(&quot;:&quot;, TEXT( hmisDataCollectionStage__c))-1))</formula>
        <label>API_DataCollectionStage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Employed__c</fullName>
        <formula>TRIM(LEFT(TEXT( Employed__c ),FIND(&quot;:&quot;, TEXT( Employed__c ))-1))</formula>
        <label>API_Employed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_EmploymentType__c</fullName>
        <formula>TRIM(LEFT(TEXT(EmploymentType__c),FIND(&quot;:&quot;, TEXT(EmploymentType__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_EmploymentType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_LastGradeCompleted__c</fullName>
        <formula>TRIM(LEFT(TEXT(LastGradeCompleted__c),FIND(&quot;:&quot;, TEXT(LastGradeCompleted__c))-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_LastGradeCompleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_NotEmployedReason__c</fullName>
        <formula>TRIM(LEFT(TEXT( NotEmployedReason__c),FIND(&quot;:&quot;, TEXT( NotEmployedReason__c ))-1))</formula>
        <label>API_NotEmployedReason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_SchoolStatus__c</fullName>
        <formula>TRIM(LEFT(TEXT( SchoolStatus__c ),FIND(&quot;:&quot;, TEXT(SchoolStatus__c ))-1))</formula>
        <label>API_SchoolStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK( DeletedDate__c )),

TEXT(YEAR(DATEVALUE( DeletedDate__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DeletedDate__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DeletedDate__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedDate__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Employed__c</fullName>
        <label>Employed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNoYesReasonsMissingData</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentType__c</fullName>
        <label>Employment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisEmploymentType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformationDate__c</fullName>
        <formula>If(NOT(ISBLANK( hmisInformationDate__c)),

TEXT(YEAR( hmisInformationDate__c ))&amp; &quot;-&quot; &amp;

LPAD(TEXT(MONTH(hmisInformationDate__c)), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(hmisInformationDate__c)), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InformationDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastGradeCompleted__c</fullName>
        <label>Last Grade Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisLastGradeCompleted</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NotEmployedReason__c</fullName>
        <label>Not Employed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisNotEmployedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employment &amp; Education</relationshipLabel>
        <relationshipName>EmploymentEducation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SchoolStatus__c</fullName>
        <label>School Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisSchoolStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisDataCollectionStage__c</fullName>
        <description>At what point in the project was the information on this record collected?</description>
        <inlineHelpText>At what point in the project was the information on this record collected?</inlineHelpText>
        <label>Data Collection Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisDataCollectionStage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hmisEnrollmentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program enrollment this education status was collected for</description>
        <inlineHelpText>The program enrollment this education status was collected for</inlineHelpText>
        <label>Program Enrollment</label>
        <referenceTo>ProgramEnrollment</referenceTo>
        <relationshipName>PersonEducation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hmisInformationDate__c</fullName>
        <description>The date this information was collected</description>
        <inlineHelpText>The date this information was collected</inlineHelpText>
        <label>Information Date</label>
        <type>Date</type>
    </fields>
    <label>Employment Education</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employment Education Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employment Education</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>